added areas and media query

--- a/index.html
+++ b/index.html
@@ -4,34 +4,19 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<title>Using CSS Grid</title>
 	</head>
 
 	<body>
-		<div class="container">
-			<div class="header">
-			<!-- Header content -->
-			Header
-			</div>
+		<div id="content">
 
-			<div class="navigation">
-			<!-- Navigation content -->
-			Navigation
-			</div>
+			<header>Header</header>
+	        <main>Main</main>
+	        <section>Section</section>
+	        <aside>Aside</aside>
+	        <nav>Nav</nav>
+	        <footer>Footer</footer>
 
-			<div class="main">
-			<!-- Main content -->
-			Main
-			</div>
-
-			<div class="side">
-			<!-- Sidebar / Ads -->
-			Side
-			</div>
-
-			<div class="footer">
-			<!-- Footer content -->
-			Footer
-			</div>
 		</div>
 
 	</body>
