--- a/index.html
+++ b/index.html
@@ -10,11 +10,21 @@
 	<body>
 		<div id="content">
 
-			<header>Header</header>
+			<header>Header
+			</header>
+
+	        <nav>
+        		<li>item1</li>
+        		<li>item2</li>
+        		<li>item3</li>
+	        </nav>
+
 	        <main>Main</main>
+
 	        <section>Section</section>
+
 	        <aside>Aside</aside>
-	        <nav>Nav</nav>
+
 	        <footer>Footer</footer>
 
 		</div>
