--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 			<header>Header
 			</header>
 
-	        <nav>
-        		<li>item1</li>
-        		<li>item2</li>
-        		<li>item3</li>
+	        <nav>Nav
+	        	<ul>
+	        		<li>item1</li>
+	        		<li>item2</li>
+	        		<li>item3</li>
+	        	</ul>
 	        </nav>
 
 	        <main>Main</main>
