update nav options

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 	        <nav>Nav
 	        	<ul>
-	        		<li>item1</li>
-	        		<li>item2</li>
-	        		<li>item3</li>
+	        		<li>Intro</li>
+	        		<li>Work Experience</li>
+	        		<li>Projects</li>
 	        	</ul>
 	        </nav>
 
